# nasa-tempo-air-quality-api

./: .dockerignore  .dodsrc  .env.example  .env.render  .gitignore  API_IMPROVEMENT_REPORT.md  API_USAGE.md  CLEANUP_REPORT.md  DEPLOYMENT.md  Dockerfile  ENDPOINT_LOCATION_RESUME.md  GEOLOCATION_IMPROVEMENT.md  GITHUB_SETUP_GUIDE.md  GUIDE_VRAIES_CONNEXIONS_API.md  HYBRID_SERVICE_DOCUMENTATION.md  LICENSE  LOCATION_SEARCH_API_GUIDE.md  Procfile  README.md  RENDER_CONFIG.md  RENDER_DEPLOYMENT_GUIDE.md  WHO_Global_Air_Quality_Integration.ipynb  alembic.ini  analyze_data_structure.py  analyze_real_sources.py  build.sh  check_credentials.py  data_pipeline_ml.py  main_simple.py  nasa_tempo_connector_real.py  pyproject.toml  real_api_connector.py  render-build.sh  render.yaml  render_start.sh  requirements-dev.txt  requirements-minimal.txt  requirements-py311-clean.txt  requirements-py311.txt  requirements-render.txt  (+13 more)
.github/: copilot-instructions.md
app/: config.py  main.py  main_backup.py  main_hybrid.py  main_real_data.py
app/collectors/: __init__.py  config.py  open_source_collector.py
app/connectors/: enhanced_realtime_connector.py  nasa_tempo_connector.py  open_source_apis.py  openweather_client.py  openweather_client_fixed.py  real_data_connector.py  tempo_full_client.py  tempo_latest_client.py
app/core/: config.py  logging.py
app/data/: __init__.py  advanced_nasa_collector.py  (+10 more)
docs/: API.md  CONFIGURATION_GUIDE.md
scripts/: collect_data.py  collect_sample_data.py  diagnose_apis.py  find_tempo_data.py  identify_tempo_apis.py  init_database.py  init_db.py
(+43 files in other folders)
